--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,14 +1,15 @@
 <footer class="footer">
+    <!-- Contenedor para el menú desplegable -->
     <div class="dropdown">
+        <!-- Botón que activa la función toggleDropdown para mostrar/ocultar el menú -->
         <button class="dropdown-btn" onclick="toggleDropdown()">Opciones de desarrollo</button>
+
+        <!-- Contenido del menú desplegable, oculto por defecto -->
         <div class="dropdown-content" id="dropdownMenu">
-            <!-- <a href="/tareas/add">Escanear Ticket</a> -->
-            <!-- <a href="/tareass">Ver Tickets Escaneados</a> -->
-            <a href="/">Volver a login</a>
-            <!-- <a href="/users/signin">login test</a> -->
-            <a href="/users/signup">Registrar usuario </a>
-            <a href="/tareas/seleccion">Seleccionar una tarea</a>
-            <a href="/admin/inicio">Vista Administración Inicio</a>
+            <a href="/">Volver a login</a> <!-- Enlace para volver al login -->
+            <a href="/users/signup">Registrar usuario </a> <!-- Enlace para registrar un nuevo usuario -->
+            <a href="/tareas/seleccion">Seleccionar una tarea</a> <!-- Enlace a la vista de selección de tareas -->
+            <a href="/admin/inicio">Vista Administración Inicio</a> <!-- Enlace al panel de administración -->
         </div>
     </div>
 </footer>
