--- a/src/views/partials/usuario.hbs
+++ b/src/views/partials/usuario.hbs
@@ -2,10 +2,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+  /* Estilos para el texto*/
 
         #usuarioActual {
 
-            font-size: 20px; /*CAMBIO AQUÍ*/
+            font-size: 20px;
 
             color: var(--celeste-oscuro);
 
@@ -38,6 +39,6 @@
 </script>
 
 <body>
-  <!-- Se define un elemento h1 con un id 'usuarioActual' que inicialmente muestra "Cargando..." -->
+  <!-- Se define un elemento h1 con un id usuarioActual que inicialmente muestra "Cargando..." -->
   <p id="usuarioActual"></p>
 </body>
