--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Coke Kronos</title>
+    <!-- Se enlazan las hojas de estilo CSS personalizadas para la página -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/espera.css">
@@ -32,9 +33,6 @@
             <button class="btn btn-primary btn-block">
                         Iniciar Sesión                       
             </button>
-
-            <!-- Mensaje de error que se mostrará si la validación falla -->
-            <!--<p id="errorMessage" class="error-message"></p>-->
 
             <!-- Enlace para recuperación de contraseña -->
             <p><a href="/users/olvido" class="forgot-password">¿Olvidaste tu contraseña?</a></p>
