--- a/src/views/users/postlogin.hbs
+++ b/src/views/users/postlogin.hbs
@@ -16,15 +16,18 @@
         };
         localStorage.setItem('usuarioActual', JSON.stringify(usuarioActual));
 
-        // Guardamos transportes y palletMaximo en Local Storage
+        // Definimos constantes para guardar transportes y palletMaximo en Local Storage
         const transportes = {{{transportes}}}; // Se usa triple mustache para parsear JSON correctamente
         const palletMaximo = {{{palletMaximo}}};
 
+        // Guardamos transportes y palletMaximo en Local Storage
         localStorage.setItem('transportes', JSON.stringify(transportes));
         localStorage.setItem('palletMaximo', JSON.stringify(palletMaximo));
 
+        //Obtenemos el rol
         const rol = usuarioActual.rol;
 
+        // Redirigimos según el rol
         if (rol === "administrador" || rol === "jefeDeTurno") {
             window.location.href = "/admin/inicio";
         } else if (rol === "operador") {
@@ -33,7 +36,6 @@
             window.location.href = "/"; 
         }
 
-        // Redirigimos
-        //window.location.href = "/tareas/seleccion";
+        
     </script>
 </body>
