--- a/src/views/tareas/esperaCambioBahia.hbs
+++ b/src/views/tareas/esperaCambioBahia.hbs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/espera_cambio_bahia.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <!-- Estilo en línea para modificar el p con id usuarioActual -->
     <style>
       #usuarioActual {
         font-size: 1.5em; /* Aumenta el tamaño del texto */
@@ -40,11 +40,8 @@
     <!-- Botón para continuar, inicialmente deshabilitado -->
     <button id="continuarBtn">Continuar</button>
 
-    <!-- Se define un elemento p con un id 'usuarioActual' -->
+    <!-- Se define un elemento p con un id usuarioActual -->
     <p id="usuarioActual"></p>
-
-    <!-- Hasta acá -->
-
 
     <!-- Enlace para cancelar la operación y regresar a la pantalla anterior -->
     <a href="/tareas/espera">Cancelar</a>
