--- a/src/views/tareas/esperaCargaCamion.hbs
+++ b/src/views/tareas/esperaCargaCamion.hbs
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/espera_carga_camion.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <!-- Estilo en línea para modificar el p con id usuarioActual -->
     <style>
       #usuarioActual {
         font-size: 1.5em; /* Aumenta el tamaño del texto */
@@ -48,7 +48,7 @@
     <!-- Botón para finalizar la tarea, inicialmente deshabilitado -->
     <button id="terminarTarea" disabled>Terminar Tarea</button>
 
-    <!-- Se define un elemento p con un id 'usuarioActual' -->
+    <!-- Se define un elemento p con un id usuarioActual -->
     <p id="usuarioActual"></p>
 
     <!-- Enlace para cancelar la operación y volver a la pantalla de espera -->
