--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,5 +1,5 @@
 <head>
-    <!-- Se enlazan las hojas de estilo CSS personalizadas para la página -->
+    <!-- Se enlazan las hojas de estilo CSS para la página -->
     <link rel="stylesheet" href="/css/espera.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/users.css">
