--- a/src/views/tareas/espera.hbs
+++ b/src/views/tareas/espera.hbs
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/css/espera.css">
     <link rel="stylesheet" href="/css/footer.css">
 
-    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <!-- Estilo en línea para modificar el p con id usuarioActual -->
     <style>
       #usuarioActual {
         font-size: 1.5em; /* Aumenta el tamaño del texto */
@@ -19,7 +19,7 @@
       // Se obtiene el objeto 'usuarioActual' del localStorage y se parsea desde JSON a un objeto JavaScript
       const usuario = JSON.parse(localStorage.getItem('usuarioActual'));
       
-      // Si el objeto 'usuario' existe en el localStorage (es decir, no es null ni undefined)
+      // Si el objeto usuario existe en el localStorage (es decir, no es null ni undefined)
       if (usuario) {
         // Se actualiza el contenido del elemento con el id 'usuarioActual' con el nombre del usuario
         document.getElementById('usuarioActual').textContent = usuario.name;
