--- a/src/views/tareas/esperaPallet.hbs
+++ b/src/views/tareas/esperaPallet.hbs
@@ -5,7 +5,7 @@
     <title>Esperando Acción</title>
     <link rel="stylesheet" href="/css/espera_pallet.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <!-- Estilo en línea para modificar el p con id usuarioActual -->
     <style>
       #usuarioActual {
         font-size: 1.5em; /* Aumenta el tamaño del texto */
@@ -37,7 +37,7 @@
     <!-- Botón para indicar que la tarea ha finalizado -->
     <button onclick="terminarTarea()">Terminar Tarea</button>
 
-    <!-- Se define un elemento p con un id 'usuarioActual' -->
+    <!-- Se define un elemento p con un id usuarioActual -->
     <p id="usuarioActual"></p>
 
     <!-- Enlace para cancelar la operación y volver a la pantalla de espera -->
