--- a/src/views/tareas/resumenCargaCamion.hbs
+++ b/src/views/tareas/resumenCargaCamion.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/resumen_carga_camion.css">
     <link rel="stylesheet" href="/css/footer.css">
 
-    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <!-- Estilo en línea para modificar el p con id usuarioActual -->
     <style>
       #usuarioActual {
         font-size: 1.5em; /* Aumenta el tamaño del texto */
@@ -23,7 +23,7 @@
       // Se obtiene el objeto 'usuarioActual' del localStorage y se parsea desde JSON a un objeto JavaScript
       const usuario = JSON.parse(localStorage.getItem('usuarioActual'));
       
-      // Si el objeto 'usuario' existe en el localStorage (es decir, no es null ni undefined)
+      // Si el objeto usuario existe en el localStorage (es decir, no es null ni undefined)
       if (usuario) {
         // Se actualiza el contenido del elemento con el id 'usuarioActual' con el nombre del usuario
         document.getElementById('usuarioActual').textContent = usuario.name;
@@ -42,7 +42,7 @@
     <!-- Botón para confirmar la carga realizada -->
     <button id="confirmarCarga">Confirmar Carga</button>
 
-    <!-- Se define un elemento p con un id 'usuarioActual' -->
+    <!-- Se define un elemento p con un id usuarioActual -->
     <p id="usuarioActual"></p>
 
     <!-- Mensaje de confirmación o error tras la acción del usuario -->
