--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -7,9 +7,10 @@
         <!-- Contenido del menú desplegable, oculto por defecto -->
         <div class="dropdown-content" id="dropdownMenu">
             <a href="/">Volver a login</a> <!-- Enlace para volver al login -->
-            <a href="/users/signup">Registrar usuario </a> <!-- Enlace para registrar un nuevo usuario -->
-            <a href="/tareas/seleccion">Seleccionar una tarea</a> <!-- Enlace a la vista de selección de tareas -->
-            <a href="/admin/inicio">Vista Administración Inicio</a> <!-- Enlace al panel de administración -->
+            <a href="/users/signup">Registrar usuario desde administración </a> <!-- Enlace para registrar un nuevo usuario -->
+            <a href="/apoderado/inicio">Inicio Copiloto</a> <!-- Enlace a la vista de selección de tareas -->
+            <a href="/admin/inicio">Inicio Admin</a> <!-- Enlace al panel de administración -->
+            <a href="/apoderado/inicio">Inicio Apoderado</a>
         </div>
     </div>
 </footer>
