--- a/src/views/users/olvido.hbs
+++ b/src/views/users/olvido.hbs
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperar Contraseña - Coke Kronos</title>
+    <title>Recuperar Contraseña</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/olvido.css">
     <link rel="stylesheet" href="/css/footer.css">
@@ -11,7 +11,7 @@
 
 <!-- Contenedor principal para la sección de recuperación de contraseña -->
 <div class="olvido-container">
-    <h1>COKE-KRONOS</h1>
+    <h1>FurgoLINK</h1>
 
     <!-- Mensaje informativo sobre la recuperación de contraseña -->
     <p>Para recuperar tu contraseña, contacta con la mesa de ayuda.</p>
@@ -21,10 +21,8 @@
 
     <!-- Lista de opciones de contacto (inicialmente oculta) -->
     <ul id="contactos" class="contact-list">
-        <li><strong>Mesa de Ayuda Chile:</strong> 1999</li>
-        <li><strong>Llamadas fuera de la Red Andina:</strong> 800-914524</li>
-        <li><strong>Correo:</strong> <a href="mailto:mesadeayuda@koandina.com">mesadeayuda@koandina.com</a></li>
-        <li><strong>WhatsApp:</strong> <a href="https://wa.me/573244500272" target="_blank">+57 324 4500272</a></li>
+        <li><strong>Mesa de Ayuda via whatsapp:</strong> +56 9 6201 3046</li>
+        <li><strong>Correo:</strong> <a href="mailto:jose.rocuant@pregrado.uoh.cl">jose.rocuant@pregrado.uoh.cl</a></li>
     </ul>
 
     <!-- Enlace para volver a la pantalla de inicio de sesión -->
