--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Coke Kronos</title>
+    <title>Login</title>
     <!-- Se enlazan las hojas de estilo CSS personalizadas para la página -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/login.css">
@@ -37,6 +37,11 @@
             <!-- Enlace para recuperación de contraseña -->
             <p><a href="/users/olvido" class="forgot-password">¿Olvidaste tu contraseña?</a></p>
         </form>
+
+        <!-- Botón extra para registro de apoderado -->
+                <a href="/users/signup_apoderado" class="btn ">
+                    Registrarme
+                </a>
     </div>
 </div>
 
