--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coke_KRONOS</title>
+    <title>furgoLINK</title>
     <!-- Cargar CSS Principal -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Cargar CSS Específico para Login -->
