Lista y Eliminacion usuarios

--- a/src/views/admin/inicio.hbs
+++ b/src/views/admin/inicio.hbs
@@ -16,6 +16,10 @@
     <button class="task-btn" onclick="window.location.href='/users/signup'">
       Registrar usuario
     </button>
+    <!-- Botón que redirige a Gestión de usuarios -->
+    <button class="task-btn" onclick="window.location.href='/admin/list'">
+      Eliminar Usuario
+    </button>
 </div>
 
 </body>
